--- a/css/styles.css
+++ b/css/styles.css
@@ -20,13 +20,13 @@ ul {
   margin-top: 50px;
   padding: 20px;
   border: 10px dashed rgba(7, 237, 11, 0.923);
-  color: #ffffff;
-  background-image: url(https://picsum.photos/id/237/200/300);
+  color: #ffffff; */
+/* background-image: url(https://picsum.photos/id/237/200/300);
   background-repeat: no-repeat;
-  background-position: top;
-  background-size: cover;
-  background: url(https://picsum.photos/id/237/200/300) no-repeat center/cover;
-} */
+  background-position: center;
+  background-size: 100%; */
+/* background: url(https://picsum.photos/id/237/200/300) no-repeat center/contain; */
+/* } */
 
 /* .savanna {
   height: 800px;
@@ -44,54 +44,21 @@ ul {
   margin: 0 auto;
 }
 
-.linear,
+/* .linear,
 .radial {
   height: 200px;
 }
 
-/* .linear {
-  background-image: linear-gradient(
-    blue 25%,
-    yellow 25% 50%,
-    red 50% 75%,
-    black 75%
-  );
-} */
-
-/* .radial {
-  background-image: radial-gradient(circle, transparent 20%, blue 20%);
-} */
-
 .linear {
-  background-color: rgb(14, 23, 6);
-  background-image: var(--gradient),
-    url(../img/african-savannah-grass-acacia-baobab-260nw-1103717600.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  margin-bottom: 100px;
+  background-image: linear-gradient(blue 100px, yellow 100px);
 }
 
-/* .title {
-  font-size: 50px;
-  text-align: center;
-  color: tomato;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-} */
-
-/* .title::before {
-  content: "";
-  width: 40px;
-  height: 40px;
-  background-color: violet;
-}
-
-.title::after {
-  content: "!";
-  color: violet;
+.radial {
+  background-image: radial-gradient(
+    circle at bottom,
+    transparent 20%,
+    blue 20%
+  );
 } */
 
 /* .box1 {
@@ -99,16 +66,24 @@ ul {
   height: 400px;
   padding: 20px;
   background-color: rgb(83, 255, 71);
-  margin: 50px auto;
+  margin: 0px auto;
+  box-shadow: 0px 0px 0px 10px teal;
 } */
 
-/* .box {
+.box {
   width: 400px;
   height: 400px;
-  border-radius: 50%;
   background-color: tomato;
-  margin: 50px auto;
-} */
+  margin: 50px auto 0;
+  text-shadow: 1500px 0 0 black, -1500px 0 0 black;
+  box-shadow: 1500px 0px 0px 0px tomato, -1500px 0px 0px 0px tomato;
+  transition-duration: 800ms;
+}
+
+.box:hover {
+  text-shadow: 0px 0 0 black;
+  box-shadow: 0px 0px 0px 0px tomato;
+}
 
 /* .btn {
     width: 200px;
@@ -120,67 +95,4 @@ ul {
 }
 .btn:active {
     box-shadow: inset 2px 2px 5px 2px rgba(47, 48, 58, 0.6);
-} */
-
-.net-list {
-  display: flex;
-  justify-content: center;
-  gap: 10px;
-}
-
-.net-link {
-  width: 44px;
-  height: 44px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: tomato;
-  border-radius: 50%;
-  color: #ffffff;
-}
-
-.net-icon {
-  fill: currentColor;
-}
-
-.net-link:hover {
-  background-color: teal;
-  color: red;
-}
-
-/* .net-link:hover {
-  background-color: teal;
-}
-
-.net-link:hover .net-icon {
-  fill: red;
-} */
-
-.clients-list {
-  display: flex;
-  gap: 30px;
-}
-
-.clients-item {
-  width: calc((100% - 60px) / 3);
-}
-
-.clients-link {
-  width: 100%;
-  height: 92px;
-  border: 1px solid #999999;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 5px;
-  color: #999999;
-}
-
-.clients-icon {
-  fill: currentColor;
-}
-
-.clients-link:hover {
-  border-color: teal;
-  color: red;
-}
+}  */
