--- a/css/styles.css
+++ b/css/styles.css
@@ -9,9 +9,6 @@
 ul {
   list-style: none;
 }
-:root {
-  --gradient: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
-}
 
 /* .bg {
   width: 800px;
@@ -20,13 +17,12 @@ ul {
   margin-top: 50px;
   padding: 20px;
   border: 10px dashed rgba(7, 237, 11, 0.923);
-  color: #ffffff; */
-/* background-image: url(https://picsum.photos/id/237/200/300);
+  color: #ffffff;
+  background-image: url(https://picsum.photos/id/237/200/300);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 100%; */
-/* background: url(https://picsum.photos/id/237/200/300) no-repeat center/contain; */
-/* } */
+  background-size: cover;
+} */
 
 /* .savanna {
   height: 800px;
@@ -34,7 +30,7 @@ ul {
     url(../img/giraffe.png), url(../img/hepard.png),
     url(../img/savanna-derevo-solnce-zakat.jpg);
   background-repeat: no-repeat;
-  background-position: bottom left, bottom 20px left 1000px,
+  background-position: bottom left, bottom 20px right 400px,
     bottom 20px left 500px, bottom 20px right, center bottom;
   background-size: auto, 300px, 500px, auto, cover;
 } */
@@ -50,49 +46,66 @@ ul {
 }
 
 .linear {
-  background-image: linear-gradient(blue 100px, yellow 100px);
+  background-color: blue;
+  background-image: linear-gradient(blue 0 50%, yellow 50% 100%, red);
 }
 
 .radial {
   background-image: radial-gradient(
-    circle at bottom,
-    transparent 20%,
-    blue 20%
+    circle at top,
+    transparent 0 20%,
+    blue 20% 100%
   );
 } */
 
-/* .box1 {
+.box1 {
   width: 400px;
   height: 400px;
   padding: 20px;
   background-color: rgb(83, 255, 71);
   margin: 0px auto;
-  box-shadow: 0px 0px 0px 10px teal;
-} */
+}
 
 .box {
   width: 400px;
   height: 400px;
+  border-radius: 20px;
   background-color: tomato;
-  margin: 50px auto 0;
-  text-shadow: 1500px 0 0 black, -1500px 0 0 black;
-  box-shadow: 1500px 0px 0px 0px tomato, -1500px 0px 0px 0px tomato;
-  transition-duration: 800ms;
+  margin: 80px auto 0;
+  transition-duration: 300ms;
+  box-shadow: 10px 10px 0px 0px rgb(71, 99, 255),
+    20px 20px 0px 0px rgb(71, 255, 129), 30px 30px 0px 0px rgb(234, 71, 255);
+  display: flex;
+  align-items: center;
+  flex-direction: row-reverse;
+  order: 0;
 }
 
-.box:hover {
-  text-shadow: 0px 0 0 black;
-  box-shadow: 0px 0px 0px 0px tomato;
+.box::before {
+  content: '';
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-image: url(../img/elephant.png);
+  background-size: cover;
+  display: inline-block;
+  order: 1;
 }
 
-/* .btn {
-    width: 200px;
-    height: 50px;
-    background-color: crimson;
-    border: none;
-    cursor: pointer;
-   
+.box::after {
+  content: '\2192';
+  font-size: 24px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: aqua;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  order: 1;
 }
-.btn:active {
-    box-shadow: inset 2px 2px 5px 2px rgba(47, 48, 58, 0.6);
-}  */
+
+.box:active {
+  box-shadow: unset;
+  transform: translate(30px, 30px);
+}
