--- a/css/styles.css
+++ b/css/styles.css
@@ -18,10 +18,6 @@ ul {
   padding: 20px;
   border: 10px dashed rgba(7, 237, 11, 0.923);
   color: #ffffff;
-  background-image: url(https://picsum.photos/id/237/200/300);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
 } */
 
 /* .savanna {
@@ -46,16 +42,11 @@ ul {
 }
 
 .linear {
-  background-color: blue;
-  background-image: linear-gradient(blue 0 50%, yellow 50% 100%, red);
+  background-image: linear-gradient();
 }
 
 .radial {
-  background-image: radial-gradient(
-    circle at top,
-    transparent 0 20%,
-    blue 20% 100%
-  );
+  background-image: radial-gradient();
 } */
 
 .box1 {
