--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ ul {
   list-style: none;
 }
 
-/* .bg {
+.bg {
   width: 800px;
   height: 400px;
   margin: 0 auto;
@@ -18,10 +18,15 @@ ul {
   padding: 20px;
   border: 10px dashed rgba(7, 237, 11, 0.923);
   color: #ffffff;
-} */
+  background-image: url(https://picsum.photos/id/237/200/300);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  /* background: url(https://picsum.photos/id/237/200/300) center/cover no-repeat; */
+}
 
-/* .savanna {
-  height: 800px;
+.savanna {
+  height: 100vh;
   background-image: url(../img/elephant.png), url(../img/lion.png),
     url(../img/giraffe.png), url(../img/hepard.png),
     url(../img/savanna-derevo-solnce-zakat.jpg);
@@ -29,25 +34,25 @@ ul {
   background-position: bottom left, bottom 20px right 400px,
     bottom 20px left 500px, bottom 20px right, center bottom;
   background-size: auto, 300px, 500px, auto, cover;
-} */
+}
 
 .container {
   width: 600px;
   margin: 0 auto;
 }
 
-/* .linear,
+.linear,
 .radial {
   height: 200px;
 }
 
 .linear {
-  background-image: linear-gradient();
+  background-image: linear-gradient(blue 50%, yellow 50%);
 }
 
 .radial {
-  background-image: radial-gradient();
-} */
+  background-image: radial-gradient(circle at top, transparent 0 30%, blue);
+}
 
 .box1 {
   width: 400px;
@@ -60,43 +65,18 @@ ul {
 .box {
   width: 400px;
   height: 400px;
-  border-radius: 20px;
+  border-radius: 0;
   background-color: tomato;
   margin: 80px auto 0;
-  transition-duration: 300ms;
-  box-shadow: 10px 10px 0px 0px rgb(71, 99, 255),
-    20px 20px 0px 0px rgb(71, 255, 129), 30px 30px 0px 0px rgb(234, 71, 255);
-  display: flex;
-  align-items: center;
-  flex-direction: row-reverse;
-  order: 0;
 }
 
-.box::before {
-  content: '';
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  background-image: url(../img/elephant.png);
-  background-size: cover;
+.box:hover::after {
   display: inline-block;
-  order: 1;
 }
 
 .box::after {
-  content: '\2192';
-  font-size: 24px;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  background-color: aqua;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  order: 1;
-}
-
-.box:active {
-  box-shadow: unset;
-  transform: translate(30px, 30px);
+  content: '';
+  width: 50px;
+  height: 50px;
+  background-color: green;
 }
